--- a/examples/index.html
+++ b/examples/index.html
@@ -3,13 +3,10 @@
     <head>
         <title>Phaser Box2D Lite</title>
         <style>
-            body {
-                margin: 0;
-            }
         </style>
     </head>
     <body>
-        <canvas id="game" width="800" height="600" />
-        <script src="index.js"></script>
+        <canvas id="demo" width="800" height="600" style="border: 1px solid red">
+        <script src="index.js" type="module"></script>
     </body>
 </html>
