--- a/examples/index.html
+++ b/examples/index.html
@@ -6,7 +6,21 @@
         </style>
     </head>
     <body>
-        <canvas id="demo" width="800" height="600" style="border: 1px solid red">
+
+        <button id="pause">pause</button>
+        <button id="stats" style="margin-right: 64px">stats</button>
+        frame: 
+        <input type="text" id="frame" value="0" style="width: 80px">
+        vec2:
+        <input type="text" id="vec2" value="0" style="width: 80px">
+        mat22:
+        <input type="text" id="mat22" value="0" style="width: 80px">
+
+        <br />
+
+        <canvas id="demo" width="800" height="600" style="border: 2px solid darkgray; margin-top: 32px">
+
         <script src="index.js" type="module"></script>
+
     </body>
 </html>
