--- a/examples/index.html
+++ b/examples/index.html
@@ -7,15 +7,17 @@
     </head>
     <body>
 
-        <button id="pause">pause</button>
-        <button id="stats" style="margin-right: 64px">stats</button>
+        <button id="pause" style="margin-right: 32px">start</button>
         frame: 
         <input type="text" id="frame" value="0" style="width: 80px">
         vec2:
         <input type="text" id="vec2" value="0" style="width: 80px">
         mat22:
-        <input type="text" id="mat22" value="0" style="width: 80px">
-
+        <input type="text" id="mat22" value="0" style="width: 80px; margin-right: 32px;">
+        frame 200:
+        <input type="text" id="frame200" value="0" style="width: 80px">
+        frame 600:
+        <input type="text" id="frame600" value="0" style="width: 80px">
         <br />
 
         <canvas id="demo" width="800" height="600" style="border: 2px solid darkgray; margin-top: 32px">
