Remove instance debug for new tests

--- a/examples/instance debug/index.html
+++ b/examples/instance debug/index.html
@@ -24,10 +24,20 @@
             <button id="pause" style="margin-right: 32px">start</button>
             frame: 
             <input type="text" id="frame" value="0" style="width: 80px">
-            bodies:
-            <input type="text" id="bodies" value="0" style="width: 80px">
-            arbiters:
-            <input type="text" id="arbiters" value="0" style="width: 80px">
+            vec2:
+            <input type="text" id="vec2" value="0" style="width: 80px">
+            mat22:
+            <input type="text" id="mat22" value="0" style="width: 80px">
+        </div>
+
+        <div>
+            frame 200:
+            <input type="text" id="frame200" value="0" style="width: 460px">
+        </div>
+
+        <div>
+            frame 600:
+            <input type="text" id="frame600" value="0" style="width: 460px">
         </div>
 
         <canvas id="demo" width="800" height="600" style="border: 2px solid darkgray; margin-top: 16px">
