New multi-part demo

--- a/examples/index.html
+++ b/examples/index.html
@@ -26,8 +26,8 @@
             <input type="text" id="frame" value="0" style="width: 80px">
             bodies:
             <input type="text" id="bodies" value="0" style="width: 80px">
-            arbiters:
-            <input type="text" id="arbiters" value="0" style="width: 80px">
+            joints:
+            <input type="text" id="joints" value="0" style="width: 80px">
         </div>
 
         <canvas id="demo" width="800" height="600" style="border: 2px solid darkgray; margin-top: 16px">
