Fixed arbiter issue

--- a/examples/index.html
+++ b/examples/index.html
@@ -51,6 +51,9 @@
             <input type="range" min="-50" max="50" value="0" id="panH"> Pan H
             <input type="range" min="-50" max="50" value="8" id="panV"> Pan V
 
+            <br />
+            <button id="stepType" style="width: 80px">NEW</button>
+
         </div>
 
         <canvas id="demo" width="800" height="600" style="border: 2px solid darkgray; margin-top: 16px">
